crates/cadenza-compiler/test-data/semantics/macros-macro-variable-doesn_t-leak.cdz
macro double_with_temp x =
    quote
        let temp = ${x} * 2
        temp

double_with_temp 5
temp